tests/Fixtures/Torture/Bad/forin_int.g
// EXPECT G032
kernel { entry func Main() { for i in 5 { } } }
